# cryptofeed--exchange-aggregator

./: Cargo.toml
src/: lib.rs  main.rs  types.rs
src/client/: http.rs  websocket.rs
src/exchanges/: error.rs  mod.rs  models.rs  traits.rs
src/exchanges/binance/: mod.rs  rest.rs  ws.rs
src/exchanges/bybit/: mod.rs  rest.rs  ws.rs
src/parser/: binance.rs  bybit.rs  kraken.rs  mod.rs
src/traits/: exchange.rs  mod.rs
