[package]
name = "cryptofeed--exchange-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http = "1.3.1"
hyper = "1.6.0"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"

[profile.release]
opt-level = 3           # или "3" для максимальной скорости
lto = true              # link-time optimization
codegen-units = 1       # уменьшает параллелизм, но лучше для оптимизации
panic = "abort"         # быстрее и меньше бинарник
strip = "symbols"       # уменьшает размер, полезно для WebAssembly, CLI и т.п.
debug = false           # можно включить для профилирования, но лучше выключить
incremental = false     # не нужна для релизной сборки
overflow-checks = false # отключает проверки арифм. переполнения